# cld4py

./: .gitignore  README.md  pyproject.toml
cld4py/: __init__.py  cld4py.py
src/cld4py/: cld4py.py
src/cld4py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: contrasts.tsv  data.tsv
