[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cld4py"
version = "1.0.0"
authors = [
  { name="Timur Yergaliyev", email="timyerg@gmail.com" },
]
description = "Python 3 function to assign compact letter display letters"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/timyerg/cld4py"
"Bug Tracker" = "https://github.com/timyerg/cld4py/issues"
