[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cld4py"
version = "1.1.1"
authors = [
  { name="Timur Yergaliyev", email="timyerg@gmail.com" },
]
description = "Python 3 function to assign compact letter display letters and for plotting them with matplotlib/seaborn"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/timyerg/cld4py"
"Bug Tracker" = "https://github.com/timyerg/cld4py/issues"
